[gd_scene load_steps=18 format=2]

[ext_resource path="res://request/laser-request/laser-request.gd" type="Script" id=1]
[ext_resource path="res://request/laser-request/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://request/laser-request/space-station.png" type="Texture" id=3]
[ext_resource path="res://request/laser-request/station.gd" type="Script" id=4]
[ext_resource path="res://request/laser-request/space-station-laser.png" type="Texture" id=5]
[ext_resource path="res://request/laser-request/space-station-laser.gd" type="Script" id=6]
[ext_resource path="res://request/laser-request/laser.mp3" type="AudioStream" id=7]
[ext_resource path="res://request/laser-request/station-sprite.gd" type="Script" id=8]
[ext_resource path="res://request/laser-request/laser-long.png" type="Texture" id=9]
[ext_resource path="res://request/laser-request/laser-long.gd" type="Script" id=10]
[ext_resource path="res://fonts/pixel-font.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://request/laser-request/earth.png" type="Texture" id=12]
[ext_resource path="res://request/laser-request/laser-earth.gd" type="Script" id=13]
[ext_resource path="res://request/laser-request/explosion.png" type="Texture" id=14]
[ext_resource path="res://request/laser-request/explosion.gd" type="Script" id=15]
[ext_resource path="res://request/laser-request/big-explosion.wav" type="AudioStream" id=16]

[sub_resource type="DynamicFont" id=1]
size = 29
font_data = ExtResource( 11 )

[node name="LaserRequest" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="Station" type="Node2D" parent="."]
script = ExtResource( 4 )

[node name="StationLaser" type="Sprite" parent="Station"]
visible = false
position = Vector2( 707, 61 )
rotation = -0.696898
scale = Vector2( 1.16962, 0.945259 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="StationSprite" type="Sprite" parent="Station"]
position = Vector2( -40, 264 )
scale = Vector2( 0.711111, 0.711111 )
texture = ExtResource( 3 )
script = ExtResource( 8 )

[node name="Laser" type="AudioStreamPlayer" parent="Station"]
stream = ExtResource( 7 )

[node name="LaserLong" type="Sprite" parent="."]
position = Vector2( -550, 296 )
texture = ExtResource( 9 )
script = ExtResource( 10 )

[node name="Control" type="Control" parent="LaserLong"]
margin_left = -550.0
margin_top = -50.0
margin_right = 550.0
margin_bottom = 50.0

[node name="Url" type="Label" parent="LaserLong/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0.654902, 0.803922, 1 )
custom_fonts/font = SubResource( 1 )
text = "http://test-url.com/arf"
align = 1
valign = 1

[node name="Earth" type="Sprite" parent="."]
visible = false
position = Vector2( 792, 496 )
scale = Vector2( 0.503959, 0.503959 )
texture = ExtResource( 12 )

[node name="LaserEarth" type="Sprite" parent="."]
position = Vector2( -376, -344 )
rotation = 0.610865
scale = Vector2( 1, 0.28 )
texture = ExtResource( 9 )
script = ExtResource( 13 )

[node name="Explosion" type="Sprite" parent="."]
visible = false
position = Vector2( 770, 440 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 14 )
script = ExtResource( 15 )

[node name="ExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[connection signal="complete" from="Station" to="." method="_on_Station_complete"]
[connection signal="complete" from="Station/StationSprite" to="." method="_on_SpaceStation_complete"]
[connection signal="finished" from="Station/Laser" to="Station" method="_on_Laser_finished"]
[connection signal="complete" from="LaserLong" to="." method="_on_LaserLong_complete"]
[connection signal="complete" from="LaserEarth" to="." method="_on_LaserEarth_complete"]
[connection signal="complete" from="Explosion" to="." method="_on_Explosion_complete"]
